# pyscad

./: .gitignore  MANIFEST.in  dev_requirements.txt  pyproject.toml  readme.md  setup.py  test.ipynb
docs/: affine.rst  brep.md  conf.py  difgeo.md  index.rst  polynomial.md  splines.md
pyscad/: __init__.py  brep.py  bspline.py  cpoint.py  curves.py  flint.py  kvec.py  nurbs.py  poly.py  surf.py
pyscad/tests/: test_bspline.py  test_cpoint.py  test_curves.py  test_flint.py  test_kvec.py  test_nurbs.py  test_poly.py  test_surf.py
src/pyscad/: __init__.py  affine.py  brep.py  bspline.py  cpoint.py  curves.py  flint.py  kvec.py  linalg.py  nurbs.py  serde.py  surf.py  trans.py  types.py  version.py
src/pyscad/brep/: __init__.py  brep.py  edge.py  face.py
src/pyscad/csg/: __init__.py  csg.py  deser.py  geo.py  op.py  prim.py
src/pyscad/csrc/: affine.c  affine.h  nurbs.c  pyaffine.c  pyaffine.h
src/pyscad/geo/: __init__.py  curve.c  curve.py  kvec.py  surf.py
src/pyscad/geo/spline/: __init__.py  bspline.py  kvec.py  nurbs.py
src/pyscad/impl/: __init__.py  affine.c  affine.h  csgnode.h  utils.h
src/pyscad/utils/: __init__.py  serde.py  trans.py
tests/: _test_curves.py  test_affine.py  test_bspline.py  test_cpoint.py  test_csgop.py  test_curve.py  test_flint.py  test_geo.py  test_kvec.py  test_linalg.py  test_nurbs.py  test_prim.py  test_repr.py  test_serde.py  test_surf.py  test_trans.py  test_types.py
