[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyscad"
version = "0.0.5"
authors = [{name="Jef Wagner", email="jefwagner@gmail.com"}]
description = "OpenSCAD like system in python"
readme = "readme.md"
keywords = ["CAD"]
license = {text="LGPL-3.0-or-later"}
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.17",
    "numpy-flint"
]

[tool.setuptools]
# packages = ["pyscad"]
license-files = ["copying*"]

