[build-system]
requires = ["setuptools>=61","oldest-supported-numpy","numpy-flint>=0.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyscad"
authors = [{name="Jef Wagner", email="jefwagner@gmail.com"}]
description = "OpenSCAD like system in python"
readme = "readme.md"
keywords = ["CAD"]
license = {text="LGPL-3.0-or-later"}
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.17",
    "numpy-flint>=0.3.0"
]
dynamic = ["version"]

[tool.setuptools]
# packages = ["pyscad"]
license-files = ["copying*"]

[tool.setuptools.dynamic]
version = {attr = "pyscad.__version__"}

